--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,14 @@ out/
 *.projects
 *.prefs
 *.project
-*.jar
-\bin
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
